kuber/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app-dp
  labels:
    pp: user-app-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: kuber-user-app
          image: kseniasharapova/user-app:1.0.0
          ports:
            - containerPort: 8000
