kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app-service
spec:
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
